--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.5"
   }
 }
