--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,8 @@ jobs:
       run: |
         npm install
         npm run build
+    - name: Add .nojekyll file
+      run: touch ./out/.nojekyll
     - name: Deploy
       uses: s0/git-publish-subdir-action@v2.5.0
       env:
